# spot-jordi-ai

./: .gitignore  config.yml  emcie_server-0.1.0-py3-none-any.whl  package-lock.json
UI/angular-jordi/: README.md  angular.json  package-lock.json  package.json
UI/angular-jordi/src/: index.html  styles.css
UI/jordi-ai/: .browserslistrc  .eslintrc.diff.js  .eslintrc.js  .gitignore  .npmrc  CHANGELOG.md  CODEOWNERS  README.md  angular.json  chat.service.ts  jordi.type.ts  package-lock.json  package.json  pull_request_template.md
UI/jordi-ai/chat-chip.component/: chat-chip.component.html  chat-chip.component.scss  (+1 more)
backend/: package-lock.json  package.json
backend/express/: index.js
backend/socket/: hackathonTemplate.js  redis.js  server.js
hackathon_template/: README.md  config.yml  pyproject.toml  run.sh  threads.json
hackathon_template/frontend/: package-lock.json  package.json
hackathon_template/frontend/src/: App.tsx
hackathon_template/hackathon_template/: main.py
hackathon_template/skills/: calculate_commitment_utilization_potential_savings.py  get_customer_ocean_clusters.py  get_docs.py  get_drinks.py  get_ocean_vngs_by_cluster.py  get_spot_ocean_features.py  get_spot_products.py  get_toppings.py
jordi-core/: app.py  apply_request.py  features_handler.py  requirements.txt
jordi-core/model/: api_auto_scale.py  api_ocean_cluster.py  api_ocean_cluster_request.py  api_ocean_strategy.py
jordi-core/repo/: api_repository.py  base_service.py  rest_client.py
node-server/: package-lock.json  package.json
node-server/socket/: server.js
(+96 files in other folders)
